# POG2WhyML

./: .gitmodules  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT  README.md
.github/workflows/: clang-format-check.yml  cmake-multi-platform.yml
etc/: bpo2why_prelude.why
src/: CMakeLists.txt  POG2WhyML.cpp  README.md  TypingContext.cpp  TypingContext.h  WhyDefine.cpp  WhyLocalHyp.cpp  WhyML.cpp  WhyML.h  WhyMLInternal.h  WhyPredicate.cpp  WhySimpleGoal.cpp  exceptions.cpp  exceptions.h  pog2why.cpp  typingContext.cpp  typingContext.h  utils.h  version.h  version_pog2why.h  why.cpp  why.h
test/: CMakeLists.txt  README.md  do_ctest  setENV.model  utils.sh
test/input/test000/: M_enum.pog
test/input/test001/: M_succ_pred.pog
test/input/test002/: M_sigma_pi.pog
test/input/test007/: M_struct_rec.pog
test/input/test008/: M_relation_eq.pog
test/input/test009/: M_first_last.pog
test/input/test010/: M_size.pog
test/input/test011/: M_card.pog
test/input/test012/: M_min_max.pog
test/input/test013/: M_bool_eq.pog
test/input/test014/: M_bool_true_false.pog
test/input/test015/: M_bool_eq_var.pog
test/input/test016/: M_prod_eq.pog
test/input/test017/: M_set_eq.pog
test/input/test018/: M_rec_eq.pog
test/input/test019/: M_strict_incl.pog
test/input/test020/: M_incl.pog
test/input/test021/: M_empty_set.pog
test/input/test022/: M_empty_seq.pog
test/input/test023/: M_INTEGER.pog
test/input/test024/: M_BOOL.pog
test/input/test025/: M_REAL.mch  M_REAL.pog
test/input/test026/: M_STRING.pog
test/input/test027/: M_NATURAL.pog
test/input/test028/: M_NATURAL1.pog
test/input/test029/: M_INT.pog
test/input/test030/: M_NAT.pog
test/input/test031/: M_NAT1.pog
test/input/test032/: M_FIN_FIN1.pog
test/input/test033/: M_POW_POW1.pog
test/input/test034/: M_union.pog
test/input/test035/: M_inter.pog
test/input/test036/: M_closure.pog
test/input/test037/: M_closure1.pog
test/input/test038/: M_ran_dom.pog
test/input/test039/: M_seq.pog
test/input/test040/: M_seq1.pog
test/input/test041/: M_iseq.pog
test/input/test042/: M_iseq1.pog
test/input/test043/: M_perm.pog
test/input/test044/: M_reverse.pog
test/input/test045/: M_id.pog
test/input/test046/: M_fnc.pog
test/input/test047/: M_rel.pog
test/input/test048/: M_front.pog
test/input/test049/: M_tail.pog
test/input/test050/: M_conc_succession.pog
test/input/test051/: M_mem_first_last.pog
test/input/test052/: M_ext_set.pog
test/input/test053/: M_ext_seq.pog
test/input/test054/: M_reverse.pog
test/input/test055/: M_interval.pog
test/input/test056/: M_set_difference.pog
test/input/test057/: M_set_union.pog
test/input/test059/: M_rel_set.pog
test/input/test060/: M_image.pog
test/input/test061/: M_partial_function.pog
test/input/test062/: M_total_function.pog
test/input/test063/: M_partial_injection.pog
test/input/test064/: M_total_injection.pog
test/input/test065/: M_partial_surjection.pog
test/scripts/: check_references.sh  update_output_references.sh  update_references.sh
(+119 files in other folders)
